add storage disks
